Fix for bug #41206: Text inserted into composer is initially invisible Removed call to FlushPendingNotifications() in SetCaretEnabled() because it causes a reflow during painting. That can cause certain view updates to be dropped on the floor on Linux. Also removed tab characters in SetCaretEnabled().

r=sfraser@netscape.com, a=beppe@netscape.com